memory optimization: lazy NBT loading, lazy packet encoding, adaptive JVM config
- DimensionRegistry: store SNBT as compressed byte[], parse on demand with SoftReference cache
- PacketSnapshot: encode per-version only on first use via ConcurrentHashMap
- Add start.sh: auto-detect container memory, set MaxRAMPercentage adaptively
- README: document memory model, JVM tuning table
- .gitignore: add *.hprof